# NeuralChain-v2

./: Cargo.toml
benches/: consensus_benchmarks.rs  neural_pow_benchmarks.rs
src/: adaptive_reward.rs  bios_cli.rs  bios_runtime.rs  bios_time.rs  block.rs  blockchain.rs  cli.rs  config.rs  consensus.rs  continuous_mining.rs  crypto.rs  decentralized_identity.rs  defi_layers.rs  evolutionary_bootstrap.rs  governance.rs  hormonal_field.rs  immune_guard.rs  lib.rs  main.rs  mempool.rs  metasynapse.rs  monitoring.rs  network_protocol.rs  neural_pow.rs  oracle_system.rs  p2p_network.rs  peer_manager.rs  physical_integration_bootstrap.rs  regenerative_layer.rs  reputation_system.rs  reward_engine.rs  storage.rs  transaction.rs  transaction_validation.rs  utils.rs  wallet.rs  zk_rollups.rs
src/immune_guard/: mod.rs
src/neuralchain_core/: autoregulation.rs  cortical_hub.rs  dream_bootstrap.rs  emergent_consciousness.rs  evolutionary_genesis.rs  hormonal_field.rs  hyperdimentional_adaptation.rs  immune_guard.rs  metasynapse.rs  mirror_core.rs  mod.rs  neural_dream.rs  neural_interconnect.rs  neural_organism_bootstrap.rs  physical_symbiosis.rs  quantum_entanglement.rs  quantum_hyperconvergence.rs  quantum_learning.rs  quantum_organism.rs  synthetic_reality.rs  system_utils.rs  temporal_manifold.rs  unified_integration.rs
src/src/: bios_runtime.rs
