[package]
name = "neuralchain"
version = "0.1.0"
edition = "2021"
authors = ["TonNom <email@example.com>"]
description = "NeuralChain - Une crypto vivante BIOSPHÈRE QUANTIC"
license = "MIT"
keywords = ["blockchain", "biosphere", "ai", "neural", "crypto"]
categories = ["cryptography::cryptocurrencies", "algorithms", "network-programming"]

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.7.0"
parking_lot = "0.12.1"
dashmap = "5.4.0"
rand = "0.8.5"
blake3 = "1.3.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = "0.4.24"
windows-sys = { version = "0.48", features = [
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation"
    "Win32_Graphics",           # Ajoutez cette ligne
    "Win32_Graphics_Direct3D12", # Ajoutez cette ligne
    "Win32_Graphics_Dxgi"       # Ajoutez cette ligne
    
], optional = true }

# (Optionnel futur)
# blake3 = "1.3"
# ed25519-dalek = "1"
# libp2p = { version = "0.53", optional = true }

[features]
default = []

[[bin]]
name = "neuralchain"
path = "src/main.rs"
